src/objects/cscfga__Product_Configuration__c.object
<CustomObject>
    <fields>
        <fullName>Add_On__c</fullName>
        <label>Add On</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Account_Number__c</fullName>
        <formula>LG_Billing_Account__r.LG_BillingAccountNumber__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_ActivateValid__c</fullName>
        <label>Activate Valid</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Address</label>
        <referenceTo>cscrm__Address__c</referenceTo>
        <relationshipLabel>Product Configurations</relationshipLabel>
        <relationshipName>Product_Configurations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LG_AttributeValuesChanged__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if there were attribute changes in comparison to replaced product configuration.</description>
        <label>Attribute values changed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LG_BillingAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Billing Account associated to product csconta__Billing_Account__c</description>
        <label>Billing Account</label>
        <referenceTo>csconta__Billing_Account__c</referenceTo>
        <relationshipLabel>Quantum Product Configurations</relationshipLabel>
        <relationshipName>Quantum_Product_Configurations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LG_Billing_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Account</label>
        <referenceTo>csconta__Billing_Account__c</referenceTo>
        <relationshipLabel>Product Configurations</relationshipLabel>
        <relationshipName>Product_Configurations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LG_ChangeType__c</fullName>
        <label>Change Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_Features__c</fullName>
        <label>Features</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LG_From_Configuration__c</fullName>
        <label>LG From Configuration</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_InstallValid__c</fullName>
        <label>Install Valid</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_InstallationClass__c</fullName>
        <label>Installation Class</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_InstallationLeadTime__c</fullName>
        <label>Installation Lead Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LG_InstallationNeeded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Installation Needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LG_InstallationPlannedDate__c</fullName>
        <label>Installation Planned Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LG_InstallationWishDate__c</fullName>
        <label>Installation Wish Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LG_MarketSegment__c</fullName>
        <label>Market Segment</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_MaximumQuantity__c</fullName>
        <label>Maximum Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LG_NumberRangeSize__c</fullName>
        <label>Number Range Size</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_NumberRangeType__c</fullName>
        <label>Number Range Type</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_Persistent_Id__c</fullName>
        <label>LG Persistent Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_PlanningDetailsStatus__c</fullName>
        <description>Planning Details Status</description>
        <inlineHelpText>Planning Details Status</inlineHelpText>
        <label>LG PlanningDetailsStatus</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_PortIn__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Port In</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LG_ProductDefinitionName__c</fullName>
        <formula>cscfga__Product_Definition__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Definition Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_ProvisionValid__c</fullName>
        <label>Provision Valid</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_Site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Site</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>cscrm__Site__c.cscrm__Installation_Address__c</field>
                <operation>equals</operation>
                <valueField>$Source.LG_Address__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>cscrm__Site__c</referenceTo>
        <relationshipLabel>Product Configurations</relationshipLabel>
        <relationshipName>Product_Configurations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LG_To_Configuration__c</fullName>
        <label>LG To Configuration</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Category__c</fullName>
        <label>Product Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Group__c</fullName>
        <description>This field is added to capture the product group for the grouping functionality at basket.</description>
        <label>Product Group</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recurring_Total_Amount__c</fullName>
        <formula>Remaining_Contract_Child__c   *  cscfga__Recurring_Charge__c  * (12/365)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Recurring Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Remaining_Contract_Child__c</fullName>
        <formula>if( LEN( cscfga__Root_Configuration__c) &gt; 1, cscfga__Root_Configuration__r.UM_RemainingContractTerm__c,UM_RemainingContractTerm__c )</formula>
        <label>Remaining Contract Child</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Site_Address__c</fullName>
        <label>Site Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Site_Id__c</fullName>
        <label>Site Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_Name__c</fullName>
        <label>Site Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Temp_State__c</fullName>
        <description>Temporary field created to load state on Attributes.</description>
        <label>Temp State</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UM_DependsOnProductConfiguration__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Depends On Product Configuration</label>
        <referenceTo>cscfga__Product_Configuration__c</referenceTo>
        <relationshipLabel>Product Configurations (Depends On)</relationshipLabel>
        <relationshipName>Product_Configurations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UM_DownsellApprovalRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Downsell Approval Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UM_RemainingContractTerm__c</fullName>
        <label>Remaining Contract Term</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User_Password__c</fullName>
        <label>User Password</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <label>Username</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cscfga__Attribute_Name__c</fullName>
        <inlineHelpText>Name of the Attribute. It is derived from Attribute Definition‘s name based on which Attribute was created.</inlineHelpText>
        <label>Attribute Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cscfga__Billing_Frequency__c</fullName>
        <inlineHelpText>Billing Frequency for Recurring Products in the Product Configuration. It can be derived from Product‘s Default Billing Frequency or with Set Billing Frequency action during configuration process.</inlineHelpText>
        <label>Line Item Billing Frequency</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cscfga__Configuration_Offer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Field not in use.</inlineHelpText>
        <label>Configuration Offer</label>
        <referenceTo>cscfga__Configuration_Offer__c</referenceTo>
        <relationshipLabel>Product Configurations</relationshipLabel>
        <relationshipName>Product_Configurations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cscfga__Configuration_Status__c</fullName>
        <description>Describes if a configuration contains errors or not</description>
        <inlineHelpText>Status of the Product Configuration. Automatically set when Product Configuration is saved.</inlineHelpText>
        <label>Configuration Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Incomplete</fullName>
                </value>
                <value>
                    <fullName>Valid</fullName>
                    <default>true</default>
                    <label>Valid</label>
                </value>
                <value>
                    <fullName>Requires Update</fullName>
                </value>
                <value>
                    <fullName>Is Valid</fullName>
                </value>
                <value>
                    <fullName>Contains Errors or Incomplete</fullName>
                </value>
                <value>
                    <fullName>Contains Expired Products</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cscfga__Contract_Term_Period_Description__c</fullName>
        <formula>case ( cscfga__Contract_Term_Period__c,
  1, &apos;Year&apos;,
  4, &apos;Quarter&apos;,
  12, &apos;Month&apos;,
  56, &apos;Week&apos;,
  365, &apos;Day&apos;,
  text(cscfga__Contract_Term_Period__c) &amp; &apos; times per year&apos;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Description of the Contract Term Period: e.g. 6 times per year, monthly, weekly, etc.</inlineHelpText>
        <label>Contract Term Period Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cscfga__Contract_Term_Period__c</fullName>
        <defaultValue>12</defaultValue>
        <description>The measure of time used by the Contract Term field.</description>
        <inlineHelpText>The measure of time used along with Contract Term to define the contract-binding period. Expressed as the number of times the period occurs in a year, for example: Annually (1), Quarterly (4), Monthly (12), Fortnightly (26) and so on.</inlineHelpText>
        <label>Contract Term Period</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cscfga__Contract_Term__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Contract Term for this Product Configuration. It can be derived from Product‘s Contract Term or with Set Contract Term action during configuration process. It is a number which combined with Contract Term Period value defines the contract-binding period.</inlineHelpText>
        <label>Contract Term</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cscfga__Description__c</fullName>
        <inlineHelpText>Description of the Product Configuration. Automatically set when Product Configuration is saved.</inlineHelpText>
        <label>Description</label>
        <length>2048</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cscfga__Entry_Date__c</fullName>
        <description>Dummy date used during the product coinfigurator to allow us to
&apos;hand roll&apos; own date picker classes (you need one &apos;real&apos; date picker
to be created by an &lt;inputField&gt; which has to be data bound to  sObject).
So this is the date we use to create our dummy hidden date picker.
All the hand-rolled ones work once this is rendered.</description>
        <inlineHelpText>Dummy input date field to enable hand-rolled date pickers to be built dynamically.</inlineHelpText>
        <label>Entry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>cscfga__Index__c</fullName>
        <inlineHelpText>The ordinal number of Product Configuration, set automatically.</inlineHelpText>
        <label>Index</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cscfga__Key__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>A case sensitive unique key for this configuration. The value of this field is not guaranteed to remain constant.</description>
        <externalId>true</externalId>
        <inlineHelpText>A key used for Help Test methods.</inlineHelpText>
        <label>Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>cscfga__Last_Screen_Index__c</fullName>
        <inlineHelpText>Index used to indicate the current screen during product configuration.</inlineHelpText>
        <label>Last Screen Index</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cscfga__One_Off_Charge__c</fullName>
        <inlineHelpText>Sum of non-recurring charges of all Line Items in the configuration.</inlineHelpText>
        <label>One Off Charge</label>
        <summarizedField>cscfga__Attribute__c.cscfga__Price__c</summarizedField>
        <summaryFilterItems>
            <field>cscfga__Attribute__c.cscfga__Is_Line_Item__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>cscfga__Attribute__c.cscfga__Recurring__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>cscfga__Attribute__c.cscfga__is_active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>cscfga__Attribute__c.cscfga__Is_rate_line_item__c</field>
            <operation>notEqual</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>cscfga__Attribute__c.cscfga__Product_Configuration__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>cscfga__Parent_Configuration__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Name of the Parent Configuration.</inlineHelpText>
        <label>Parent Configuration</label>
        <referenceTo>cscfga__Product_Configuration__c</referenceTo>
        <relationshipLabel>Related Configurations</relationshipLabel>
        <relationshipName>Related_Configurations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cscfga__Product_Basket__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Name of associated Product Basket.</inlineHelpText>
        <label>Product Basket</label>
        <referenceTo>cscfga__Product_Basket__c</referenceTo>
        <relationshipLabel>Product Configurations</relationshipLabel>
        <relationshipName>Product_Configurations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cscfga__Product_Bundle__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Name of associated Product Bundle.</inlineHelpText>
        <label>Product Bundle</label>
        <referenceTo>cscfga__Product_Bundle__c</referenceTo>
        <relationshipLabel>Configured Products</relationshipLabel>
        <relationshipName>Product_Configurations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cscfga__Product_Definition__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Name of Product Definition from which this Configuration was derived.</inlineHelpText>
        <label>Product Definition</label>
        <referenceTo>cscfga__Product_Definition__c</referenceTo>
        <relationshipLabel>Product Configurations</relationshipLabel>
        <relationshipName>Product_Configurations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cscfga__Product_Family__c</fullName>
        <description>This field will be mapped to the Product2.Family field at Opportunity sync time.
Default value is taken from Product_Definition__c.Name.</description>
        <inlineHelpText>Is used for better control over the process, enabling fine-grained forecasting capabilities. By default Product Defn name will auto-populate this field, overridden using Set Product Family action during config. Is mapped to Product2.Family fld at Opp sync</inlineHelpText>
        <label>Product Family</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cscfga__Quantity__c</fullName>
        <defaultValue>1</defaultValue>
        <inlineHelpText>Quantity of this Product Configurations in the bundle.</inlineHelpText>
        <label>Quantity</label>
        <precision>5</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cscfga__Recurrence_Frequency__c</fullName>
        <inlineHelpText>Recurrence Frequency for Recurring Products of the Product Configuration. It can be derived from Product‘s Default Recurrence Frequency or with Set Recurrence Frequency Action during configuration process.</inlineHelpText>
        <label>Line Item Recurrence Frequency</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cscfga__Recurring_Charge__c</fullName>
        <inlineHelpText>Sum of recurring charges of all Line Items in the configuration.</inlineHelpText>
        <label>Recurring Charge</label>
        <summarizedField>cscfga__Attribute__c.cscfga__Price__c</summarizedField>
        <summaryFilterItems>
            <field>cscfga__Attribute__c.cscfga__Is_Line_Item__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>cscfga__Attribute__c.cscfga__is_active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>cscfga__Attribute__c.cscfga__Recurring__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>cscfga__Attribute__c.cscfga__Is_rate_line_item__c</field>
            <operation>notEqual</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>cscfga__Attribute__c.cscfga__Product_Configuration__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>cscfga__Root_Configuration__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The root configuration in the hierarchy, if any</description>
        <inlineHelpText>Name of the Parent (Root) Configuration.</inlineHelpText>
        <label>Root Configuration</label>
        <referenceTo>cscfga__Product_Configuration__c</referenceTo>
        <relationshipLabel>All Descendent Configurations</relationshipLabel>
        <relationshipName>Descendent_Configurations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cscfga__Screen_Flow__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Used for associating a Screen Flow to the configuration. When editing Product Configuration associated Screen Flow will be displayed instead of regular Configuration Screen.</inlineHelpText>
        <label>Screen Flow</label>
        <referenceTo>cscfga__Screen_Flow__c</referenceTo>
        <relationshipLabel>Product Configurations</relationshipLabel>
        <relationshipName>Product_Configurations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cscfga__Serial_Number__c</fullName>
        <displayFormat>PC-{00000000}</displayFormat>
        <inlineHelpText>Automatically assigned by the system.</inlineHelpText>
        <label>Serial Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>cscfga__Total_Price__c</fullName>
        <inlineHelpText>Unit Price multiplied with Quantity.</inlineHelpText>
        <label>Total Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>cscfga__Unit_Price__c</fullName>
        <inlineHelpText>Sum of recurring charges within one year and non-recurring charges for all Line Items in the configuration.</inlineHelpText>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>cscfga__User_Session__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Field not in use.</inlineHelpText>
        <label>User Session</label>
        <referenceTo>cscfga__User_Session__c</referenceTo>
        <relationshipLabel>Product Configurations</relationshipLabel>
        <relationshipName>Product_Configurations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cscfga__Validation_Message__c</fullName>
        <inlineHelpText>Message field that should appear if Configuration Validation fails.</inlineHelpText>
        <label>Validation Message</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cscfga__originating_offer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to the offer from which this configuration was cloned.</description>
        <inlineHelpText>Link to the offer from which this configuration was cloned.</inlineHelpText>
        <label>Originating Offer</label>
        <referenceTo>cscfga__Configuration_Offer__c</referenceTo>
        <relationshipLabel>Configuration Offer</relationshipLabel>
        <relationshipName>Configuration_Offer</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cscfga__package_guid__c</fullName>
        <description>Allows the configurations to be grouped together as an immutable group based on being cloned from the same offer.</description>
        <inlineHelpText>Allows the configurations to be grouped together as an immutable group based on being cloned from the same offer.</inlineHelpText>
        <label>Package GUID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cscfga__package_slot__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If the configuration is part of a package, this lookup will link it to the slot were it is attached to</description>
        <inlineHelpText>If the configuration is part of a package, this lookup will link it to the slot were it is attached to</inlineHelpText>
        <label>Package slot</label>
        <referenceTo>cscfga__Attribute__c</referenceTo>
        <relationshipLabel>Product Configurations</relationshipLabel>
        <relationshipName>Product_Configurations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cscfga__total_contract_value__c</fullName>
        <description>It has total value as one-off charge plus total recurring occurrences in whole contract term period.</description>
        <label>Total Contract Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>cscfga__total_one_off_charge__c</fullName>
        <description>One Off Charge plus sum of all Related Product Total One Off Charges</description>
        <inlineHelpText>One Off Charge plus sum of all Related Product Total One Off Charges</inlineHelpText>
        <label>Total One Off Charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>cscfga__total_recurring_charge__c</fullName>
        <description>Recurring Charge plus all Related Products Total Recurring Charge</description>
        <inlineHelpText>Recurring Charge plus all Related Products Total Recurring Charge</inlineHelpText>
        <label>Total Recurring Charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>csexpimp1__guid__c</fullName>
        <description>GUID for JSON export/import</description>
        <externalId>true</externalId>
        <inlineHelpText>GUID for JSON export/import</inlineHelpText>
        <label>GUID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>csordtelcoa__Config_Key__c</fullName>
        <label>Config Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>csordtelcoa__Hierarchy_Level__c</fullName>
        <description>Helper field used for pre-populating the hierarchy level in hierarchical PC structures regardless of their origin. The field is used only for backend processing and should not be visible to anyone.</description>
        <label>Hierarchy Level</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>csordtelcoa__Ignore_For_Order_Decomposition__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, configuration and all its child configurations are ignored during order decomposition. Otherwise product type setting on product definition is observed</description>
        <inlineHelpText>If checked, configuration and all its child configurations are ignored during order decomposition. Otherwise product type setting on product definition is observed</inlineHelpText>
        <label>Ignore For Order Decomposition</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>csordtelcoa__Parent_Lookup_Configuraiton__c</fullName>
        <description>Helper field used for pre-populating of lookup based hierarchy parent IDs. The field is used only for backend processing and should not be visible to anyone.</description>
        <label>Parent Lookup Configuration</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>csordtelcoa__Replaced_Product_Configuration__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Replaced Product Configuration</label>
        <referenceTo>cscfga__Product_Configuration__c</referenceTo>
        <relationshipLabel>Product Configurations (Replaced Product Configuration)</relationshipLabel>
        <relationshipName>Product_Configurations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>csordtelcoa__Replaced_Service__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Replaced Service</label>
        <referenceTo>csord__Service__c</referenceTo>
        <relationshipLabel>Product Configurations</relationshipLabel>
        <relationshipName>Product_Configurations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>csordtelcoa__Replaced_Subscription__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Replaced Subscription</label>
        <referenceTo>csord__Subscription__c</referenceTo>
        <relationshipLabel>Product Configurations</relationshipLabel>
        <relationshipName>Product_Configurations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>csordtelcoa__Solution__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to a Solution encompassing the Product Configuration object</description>
        <inlineHelpText>Lookup to a Solution encompassing the Product Configuration object</inlineHelpText>
        <label>Solution</label>
        <referenceTo>csord__Solution__c</referenceTo>
        <relationshipLabel>Product Configurations</relationshipLabel>
        <relationshipName>Product_Configurations</relationshipName>
        <type>Lookup</type>
    </fields>
      <fields>
        <fullName>LG_AccessType__c</fullName>
        <label>Access Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
     <fields>
        <fullName>LG_AccessNetwork__c</fullName>
        <label>Access Network</label>
        <length>100</length>
        <type>Text</type>
    </fields>
     <fields>
        <fullName>LG_CustomProductName__c</fullName>
        <description>This name is a customized name field, which can be used for identifying the product, instead of the actual configuration name. Used in cases of MLE columns to display a customized name.</description>
        <label>Custom Product Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
      <fields>
        <fullName>LG_UploadSpeed__c</fullName>
        <label>Upload Speed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LG_SecondaryAccess__c</fullName>
        <label>Secondary Access</label>
        <length>99</length>
        <type>Text</type>
    </fields>
    <label>Product Configuration</label>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>cscfga__All</fullName>
        <columns>NAME</columns>
        <columns>cscfga__Product_Definition__c</columns>
        <columns>cscfga__Entry_Date__c</columns>
        <columns>cscfga__Product_Bundle__c</columns>
        <columns>cscfga__Total_Price__c</columns>
        <columns>cscfga__Unit_Price__c</columns>
        <columns>cscfga__Quantity__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>csexpimp1__Guid_Format_Check</fullName>
        <active>true</active>
        <description>Validates the format of GUID, but allows for it to remain blank.</description>
        <errorConditionFormula>AND(NOT( REGEX( csexpimp1__guid__c , &quot;\\w{8}-\\w{4}-\\w{4}-\\w{4}-\\w{12}&quot;) )
, NOT(ISBLANK(csexpimp1__guid__c )))</errorConditionFormula>
        <errorDisplayField>csexpimp1__guid__c</errorDisplayField>
        <errorMessage>Required format of the GUID is xxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx
With x being any alphanumeric character (letter or digit).</errorMessage>
    </validationRules>
</CustomObject>